--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.0.4
   device_preview: ^0.7.4
+  flutter_config: ^2.0.0
   flutter_gen: ^3.1.1
   flutter_test:
     sdk: flutter
