--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -8,7 +8,7 @@ jobs:
     name: Publish My Afya Hub Prod binary to TestFlight
     timeout-minutes: 60
     runs-on: macos-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/setup-ios-deploy'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
