--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   localstorage: ^4.0.0+1
   location: ^4.2.3
   misc_utilities: ^0.1.27-nullsafety
+  pin_code_text_field: ^1.8.0
   rxdart: ^0.27.1
   sentry_flutter: ^5.1.0
   shared_preferences: ^2.0.6
