--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   device_info: ^2.0.2
   domain_objects: ^0.0.31-nullsafety
   dotted_border: ^2.0.0
+  dotted_decoration: ^2.0.0
   double_back_to_close_app: ^2.0.1
   facebook_app_events: ^0.12.0
   file_picker: ^3.0.2+2
