--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -8,7 +8,7 @@ jobs:
     name: Publish My Afya Hub Prod binary to TestFlight
     timeout-minutes: 60
     runs-on: macos-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/setup-ios-deploy'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/app-ci-fixes'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -36,14 +36,12 @@ jobs:
           GC_KEYS: ${{ secrets.GC_KEYS }}
           GOOGLE_SERVICES_INFO_PLIST_FILE: ${{secrets.GOOGLE_SERVICES_INFO_PLIST_FILE}}
           INFO_PLIST_FILE: ${{secrets.INFO_PLIST_FILE}}
-          CREDENTIALS_ENV: ${{secrets.CREDENTIALS_ENV}}
 
         run: |
           cd ios
           echo $GC_KEYS > ./gc_keys.json
           echo $INFO_PLIST_FILE > ./Runner/info.plist
           echo $GOOGLE_SERVICES_INFO_PLIST_FILE > ./Runner/GoogleService-Info.plist
-          echo $CREDENTIALS_ENV > ./credentials/add_credentials_to_env.sh
 
       - name: Code sign and build prod app
         env:
