chore: remove unused packages

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -81,3 +81,5 @@ linter:
     no_adjacent_strings_in_list: false
     use_setters_to_change_properties: false
     directives_ordering: false
+    #Todo: Remove Trailing commas
+    require_trailing_commas: false
