--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,28 +1,23 @@
 name: myafyahub
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   afya_moja_core: ^0.0.27
   app_wrapper: ^0.1.23
   async_redux: ^12.0.0
   cached_network_image: ^3.0.0
-  camera: ^0.8.1+3
   connectivity: ^3.0.6
-  cupertino_icons: ^1.0.3
   dart_fcm: ^0.0.23
   debug_logger: ^0.0.23
   device_info: ^2.0.2
   domain_objects: ^0.0.31-nullsafety
-  dotted_border: ^2.0.0
-  dotted_decoration: ^2.0.0
   double_back_to_close_app: ^2.0.1
   facebook_app_events: ^0.12.0
-  file_picker: ^3.0.2+2
   firebase_analytics: ^8.2.0
   firebase_core: ^1.4.0
   firebase_core_platform_interface: ^4.0.1
@@ -30,7 +25,6 @@ dependencies:
   firebase_messaging: ^10.0.8
   firebase_remote_config: ^0.10.0+3
   firebase_remote_config_platform_interface: ^0.3.0+6
-  fl_chart: ^0.36.1
   flutter:
     sdk: flutter
   flutter_config: ^2.0.0
@@ -44,17 +38,13 @@ dependencies:
   freezed: ^0.14.2
   freezed_annotation: ^0.14.2
   google_fonts: ^2.1.0
-  google_maps_flutter: ^2.0.6
   html: ^0.15.0
   http: ^0.13.3
   image_picker: ^0.8.0+1
   intl: ^0.17.0
-  introduction_screen: ^2.1.0
   json_annotation: ^4.0.1
   json_serializable: ^4.1.3
   launch_review: ^3.0.1
-  localstorage: ^4.0.0+1
-  location: ^4.2.3
   misc_utilities: ^0.1.28-nullsafety
   path: ^1.8.0
   pin_code_text_field: ^1.8.0
@@ -67,8 +57,6 @@ dependencies:
   shared_themes: ^0.1.1
   shared_ui_components: ^0.1.38-nullsafety
   shimmer: ^2.0.0
-  smooth_page_indicator: ^0.3.0-nullsafety.0
-  sms_autofill: ^2.0.1
   sqflite: ^2.0.0+3
   transparent_image: ^2.0.0
   uni_links: ^0.5.1
