--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   shared_themes: ^0.1.1
   shared_ui_components: ^0.1.38-nullsafety
   shimmer: ^2.0.0
+  sms_autofill: ^2.2.0
   sqflite: ^2.0.0+3
   transparent_image: ^2.0.0
   uni_links: ^0.5.1
