--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   app_wrapper: ^0.1.23
   async_redux: ^12.0.0
   cached_network_image: ^3.0.0
-  connectivity: ^3.0.6
+  connectivity_plus: ^2.0.3
   dart_fcm: ^0.0.23
   debug_logger: ^0.0.23
   device_info: ^2.0.2
@@ -69,6 +69,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.0.4
+  connectivity_plus_platform_interface: ^1.1.1
   device_preview: ^0.7.4
   flutter_gen: ^3.1.1
   flutter_test:
