feat: handle deep link

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="http" android:host="myafyahub.co.ke" />
+                <data android:scheme="http" android:host="myafyahub.page.link" />
                 <data android:scheme="https" />
             </intent-filter>
         </activity>
