--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   app_wrapper: ^0.1.23
   async_redux: ^12.0.0
   cached_network_image: ^3.0.0
+  chewie: ^1.2.2
   connectivity_plus: ^2.0.3
   dart_fcm: ^0.0.23
   debug_logger: ^0.0.23
@@ -68,6 +69,7 @@ dependencies:
   url_launcher: ^6.0.6
   user_feed: ^0.1.45-nullsafety
   user_profile: ^0.1.24-nullsafety
+  video_player: ^2.2.7
 
 dev_dependencies:
   build_runner: ^2.0.4
