--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.17.0
   json_annotation: ^4.0.1
   json_serializable: ^4.1.3
+  just_audio: ^0.9.18
   launch_review: ^3.0.1
   misc_utilities: ^0.1.28-nullsafety
   path: ^1.8.0
