fix: audio and video player

--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -35,14 +35,12 @@ jobs:
       - name: Convert secret to gc file
         env:
           GC_KEYS: ${{ secrets.GC_KEYS }}
-          DEV_SENTRY_DNS: ${{ secrets.DEV_SENTRY_DNS }}
-          PROD_SENTRY_DNS: ${{ secrets.DEV_SENTRY_DNS }}
+          APP_ENV_FILE: ${{ secrets.APP_ENV_FILE }}
           GOOGLE_SERVICES_INFO_PLIST_FILE: ${{secrets.GOOGLE_SERVICES_INFO_PLIST_FILE}}
           INFO_PLIST_FILE: ${{secrets.INFO_PLIST_FILE}}
 
         run: |
-          echo $DEV_SENTRY_DNS > .env
-          echo $PROD_SENTRY_DNS >> .env
+          echo $APP_ENV_FILE > .env
           cd ios
           echo $GC_KEYS > ./gc_keys.json
           echo $INFO_PLIST_FILE > ./Runner/info.plist
@@ -91,14 +89,12 @@ jobs:
       - name: Convert secret to gc file
         env:
           GC_KEYS: ${{ secrets.GC_KEYS }}
-          DEV_SENTRY_DNS: ${{ secrets.DEV_SENTRY_DNS }}
-          PROD_SENTRY_DNS: ${{ secrets.DEV_SENTRY_DNS }}
+          APP_ENV_FILE: ${{ secrets.APP_ENV_FILE }}
           GOOGLE_SERVICES_INFO_PLIST_FILE: ${{secrets.GOOGLE_SERVICES_INFO_PLIST_FILE}}
           INFO_PLIST_FILE: ${{secrets.INFO_PLIST_FILE}}
 
         run: |
-          echo $DEV_SENTRY_DNS > .env
-          echo $PROD_SENTRY_DNS >> .env
+          echo $APP_ENV_FILE > .env
           cd ios
           echo $GC_KEYS > ./gc_keys.json
           echo $INFO_PLIST_FILE > ./Runner/info.plist
@@ -147,14 +143,12 @@ jobs:
       - name: Convert secret to gc file
         env:
           GC_KEYS: ${{ secrets.GC_KEYS }}
-          DEV_SENTRY_DNS: ${{ secrets.DEV_SENTRY_DNS }}
-          PROD_SENTRY_DNS: ${{ secrets.DEV_SENTRY_DNS }}
+          APP_ENV_FILE: ${{ secrets.APP_ENV_FILE }}
           GOOGLE_SERVICES_INFO_PLIST_FILE: ${{secrets.GOOGLE_SERVICES_INFO_PLIST_FILE}}
           INFO_PLIST_FILE: ${{secrets.INFO_PLIST_FILE}}
 
         run: |
-          echo $DEV_SENTRY_DNS > .env
-          echo $PROD_SENTRY_DNS >> .env
+          echo $APP_ENV_FILE > .env
           cd ios
           echo $GC_KEYS > ./gc_keys.json
           echo $INFO_PLIST_FILE > ./Runner/info.plist
