--- a/ios/Podfile
+++ b/ios/Podfile
@@ -44,6 +44,10 @@ post_install do |installer|
   #Removes deployment target from all Pods and instead inherits the specified iOS target on line 2 of this file
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+        '$(inherited)',
+        'AUDIO_SESSION_MICROPHONE=0'
+      ]
       config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
     end
   end
