fix: flag suggested groups

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,7 +142,7 @@ jobs:
             # First deploy to firebase app tester with the -alpha suffix for QA
             flutter build apk --release --target=$HOME/project/lib/bin/main_demo.dart  --build-number $CIRCLE_BUILD_NUM --build-name=$BUILD_VERSION_ROOT.$CIRCLE_BUILD_NUM-alpha 
             BUNDLE_FILE_PATH=$HOME/project/build/app/outputs/flutter-apk/app-release.apk
-            firebase appdistribution:distribute $BUNDLE_FILE_PATH --app $FIREBASE_APP_ID --groups "internal-testers" --token $FIREBASE_TOKEN --release-notes-file $HOME/project/demo-release-notes.txt
+            firebase appdistribution:distribute $BUNDLE_FILE_PATH --app $FIREBASE_APP_ID --groups "external-testers" --token $FIREBASE_TOKEN --release-notes-file $HOME/project/demo-release-notes.txt
             echo "Build with number $BUILD_VERSION_ROOT.$CIRCLE_BUILD_NUM-alpha has been deployed successfully to Firebase app tester"
 
             # Build and deploy to play store
@@ -221,21 +221,19 @@ workflows:
    jobs:
      - run_tests_and_generate_coverage
      - deploy_to_internal_firebase_app_tester:
-        #  requires:
-        #    - run_tests_and_generate_coverage
+         requires:
+           - run_tests_and_generate_coverage
          filters:
            branches:
              only:
                - develop
-               - setup_staging
      - deploy_to_play_store_alpha:
-        #  requires:
-        #    - run_tests_and_generate_coverage
+         requires:
+           - run_tests_and_generate_coverage
          filters:
            branches:
              only:
                - alpha
-               - setup_staging
      - deploy_to_play_store_beta:
          requires:
            - run_tests_and_generate_coverage
