feat: debug app freeze

--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -33,13 +33,15 @@ jobs:
       - name: Convert secret to gc file
         env:
           GC_KEYS: ${{ secrets.GC_KEYS }}
-          APP_ENV_FILE: ${{ secrets.APP_ENV_FILE }}
+          DEV_SENTRY_DNS: ${{ secrets.DEV_SENTRY_DNS }}
+          PROD_SENTRY_DNS: ${{ secrets.PROD_SENTRY_DNS }}
           GOOGLE_SERVICES_INFO_PLIST_FILE: ${{secrets.GOOGLE_SERVICES_INFO_PLIST_FILE}}
           INFO_PLIST_FILE: ${{secrets.INFO_PLIST_FILE}}
 
         run: |
           touch .env
-          echo $APP_ENV_FILE >> .env
+          echo $DEV_SENTRY_DNS > .env
+          echo $PROD_SENTRY_DNS >> .env
           cd ios
           touch gc_keys.json
           echo $GC_KEYS >> gc_keys.json
@@ -86,13 +88,15 @@ jobs:
       - name: Convert secret to gc file
         env:
           GC_KEYS: ${{ secrets.GC_KEYS }}
-          APP_ENV_FILE: ${{ secrets.APP_ENV_FILE }}
+          DEV_SENTRY_DNS: ${{ secrets.DEV_SENTRY_DNS }}
+          PROD_SENTRY_DNS: ${{ secrets.PROD_SENTRY_DNS }}
           GOOGLE_SERVICES_INFO_PLIST_FILE: ${{secrets.GOOGLE_SERVICES_INFO_PLIST_FILE}}
           INFO_PLIST_FILE: ${{secrets.INFO_PLIST_FILE}}
 
         run: |
           touch .env
-          echo $APP_ENV_FILE >> .env
+          echo $DEV_SENTRY_DNS > .env
+          echo $PROD_SENTRY_DNS >> .env
           cd ios
           touch gc_keys.json
           echo $GC_KEYS >> gc_keys.json
