--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
   async_redux: ^12.0.0
   cached_network_image: ^3.0.0
   chewie: ^1.2.2
-  connectivity_plus: ^2.0.3
+  collection: ^1.15.0
+  connectivity_plus: ^1.0.1
   dart_fcm: ^0.0.23
   debug_logger: ^0.0.23
   device_info: ^2.0.2
@@ -61,6 +62,7 @@ dependencies:
   shimmer: ^2.0.0
   sms_autofill: ^2.2.0
   sqflite: ^2.0.0+3
+  stream_chat_flutter: ^3.1.1
   transparent_image: ^2.0.0
   uni_links: ^0.5.1
   unicons: ^2.0.1
