--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,6 +96,8 @@ jobs:
             lcov --remove coverage/lcov.info 'lib/**/*.gr.dart' -o coverage/lcov.info
             lcov --remove coverage/lcov.info 'lib/infrastructure/repository/sqlite.dart' -o coverage/lcov.info
             lcov --remove coverage/lcov.info 'lib/presentation/core/widgets/preload_app.dart' -o coverage/lcov.info
+            lcov --remove coverage/lcov.info 'lib/presentation/communities/channel_page.dart' -o coverage/lcov.info
+            lcov --remove coverage/lcov.info 'lib/presentation/communities/community_utils.dart' -o coverage/lcov.info
             lcov --remove coverage/lcov.info 'lib/infrastructure/connecitivity/connectivity_helper.dart' -o coverage/lcov.info
             genhtml -q -o coverage coverage/lcov.info
             python3 check_coverage.py
